--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/aelichung/houseplant#readme",
   "dependencies": {
+    "handlebars": "^4.7.8",
     "tedious": "^18.2.1"
   }
 }
